# py-template

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yaml
docs/: index.md  libs.md  premissasDocumentacao.md  replicandoProjeto.md
docs/stylesheets/: extra.css
libs/: index.html
premissasDocumentacao/: index.html
replicandoProjeto/: index.html
search/: search_index.json
src/: __init__.py
stylesheets/: extra.css
tests/: __init__.py  func_test.py  unity_test.py
