[tool.poetry]
name = "py-template"
version = "1.0"
description = "Setup básico de projetos em python."
authors = ["Gabriel Brigido <gabriel.brigido@gbinteligencia.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taskipy = "^1.12.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
commitizen = "^3.13.0"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.docs.dependencies]
mkdocstrings-python = "^1.7.5"
mkdocs-material = "^9.4.14"
pymdown-extensions = "^10.5"
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
docs = "mkdocs serve"
git-config = "pre-commit install && pre-commit install --hook-type commit-msg"
pre-commit = "pytest -v && git add . && pre-commit run"
commit = "pytest -v && git add . && cz commit"
push = "git push origin"
update = "git pull origin"
test = "pytest -v"

[tool.bandit]
exclude_dirs = ["tests"]
